--- a/development.ini.sample
+++ b/development.ini.sample
@@ -61,6 +61,9 @@ session.type = cookie
 session.validate_key = aa8deb7d-a235-4f8d-807a-6497a8bb26af
 fernet.key = "zE6FxujQYFMojxYXt9VIkM4kYTLgEE7ObzLYMsRerxc="
 
+# Site branding options
+branding.name = AlgoBOWL
+
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # un-comment the desired settings here:
 #cache.data_dir = %(here)s/data/cache
