--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,3 +93,21 @@ jobs:
         with:
           name: dist
           path: dist
+  pypi-publish:
+    name: Upload release to PyPI
+    needs: build-dist
+    runs-on: ubuntu-22.04
+    environment:
+      name: release
+      url: https://pypi.org/p/algobowl
+    permissions:
+      id-token: write
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    steps:
+    - name: "Download Artifacts"
+      uses: actions/download-artifact@v4
+      with:
+        name: dist
+        path: dist
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
